--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.15 【今日阅读】https://martinfowler.com/articles/ship-show-ask.html Ship/Show/Ask is a branching strategy that combines the features of Pull Requests with the ability to keep shipping changes. Changes are categorized as either Ship (merge into mainline without review), Show (open a pull request for review, but merge into mainline immediately), or Ask (open a pull request for discussion before merging).
+
 9.14 【今日阅读】https://www.youtube.com/watch?v=t705r8ICkRw&t=810s Elon Musk’s Five Steps to Optimize: - Question the Requirements - Delete Parts or Processes - Simplify - Accelerate - Automate
 
 9.13 【今日阅读】https://neverworkintheory.org/2021/09/12/developer-testing-in-the-ide.html half of developers do not test at all; most programming sessions end without any test execution; 12% of tests show flaky behavior; test-driven development (TDD) is not widely practiced; and software developers only spend a quarter of their time engineering tests, whereas they think they test half of their time.
