--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.17 【今日阅读】https://github.blog/2020-01-17-bring-your-monorepo-down-to-size-with-sparse-checkout/ 为了更好的支持 monorepo 解决文件过多的问题，git 提供了 sparse-checkout
+
 9.16 【今日阅读】https://mp.weixin.qq.com/s/I-8ecySNbkiVCZCgITEYEw 结算系统设计方法
 
 9.15 【今日阅读】https://martinfowler.com/articles/ship-show-ask.html Ship/Show/Ask is a branching strategy that combines the features of Pull Requests with the ability to keep shipping changes. Changes are categorized as either Ship (merge into mainline without review), Show (open a pull request for review, but merge into mainline immediately), or Ask (open a pull request for discussion before merging).
