--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.19 【今日阅读】https://lobste.rs/s/emyfhx/ditch_your_version_manager I feel like Nix/Guix vs Docker is like … do you want the right idea with not-enough-polish-applied, or do you want the wrong idea with way-too-much-polish-applied?
+
 9.18 【今日阅读】https://github.com/joelparkerhenderson/monorepo-vs-polyrepo Monorepo means using one repository that contains many projects, and polyrepo means using a repository per project. This page discusses the similarities and differences, and has advice and opinions on both.
 
 9.17 【今日阅读】https://github.blog/2020-01-17-bring-your-monorepo-down-to-size-with-sparse-checkout/ 为了更好的支持 monorepo 解决文件过多的问题，git 提供了 sparse-checkout
