--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.20 【今日阅读】https://zhuanlan.zhihu.com/p/412034775 现实的需求就是要这也集成那也集成，不可能让你独立正交，需求都是非常合理的，不是为了复杂而复杂
+
 9.19 【今日阅读】https://lobste.rs/s/emyfhx/ditch_your_version_manager I feel like Nix/Guix vs Docker is like … do you want the right idea with not-enough-polish-applied, or do you want the wrong idea with way-too-much-polish-applied?
 
 9.18 【今日阅读】https://github.com/joelparkerhenderson/monorepo-vs-polyrepo Monorepo means using one repository that contains many projects, and polyrepo means using a repository per project. This page discusses the similarities and differences, and has advice and opinions on both.
