--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.22 【今日阅读】https://trishagee.com/2020/09/07/reading-code-is-a-skill/ 1. It's wrong to assume someone wrote unreadable code 2. It's a narrative of blame and it doesn't solve anything 3. Readable code is subjective
+
 9.21 【今日阅读】https://hacker-recommended-books.vercel.app/category/0/all-time/page/0/0 40,000 HackerNews book recommendations
 
 9.20 【今日阅读】https://zhuanlan.zhihu.com/p/412034775 现实的需求就是要这也集成那也集成，不可能让你独立正交，需求都是非常合理的，不是为了复杂而复杂
