--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.23 【今日阅读】https://mp.weixin.qq.com/s/iCpGXk_j_CWRLP1cKACFjA 沃尔沃目前的电子电气架构拥有100多个分布式的ECU，Patrik坦陈，这些方案都是以软硬件打包的方式从不同供应商那里采购的，沃尔沃主要承担了集成的工作。Patrik抱怨道，集成的工作量呈指数级增长，开发周期变得更长，再如此下去，汽车制造商将会失去竞争力。
+
 9.22 【今日阅读】https://trishagee.com/2020/09/07/reading-code-is-a-skill/ 1. It's wrong to assume someone wrote unreadable code 2. It's a narrative of blame and it doesn't solve anything 3. Readable code is subjective
 
 9.21 【今日阅读】https://hacker-recommended-books.vercel.app/category/0/all-time/page/0/0 40,000 HackerNews book recommendations
