--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.25 【今日阅读】https://nick.groenen.me/posts/rust-error-handling/ How should you structure error handling in a mature rust application?
+
 9.24 【今日阅读】https://lobste.rs/s/sttul0/concept_files_folder_unfamiliar_modern Concept of files and folder unfamiliar to modern students
 
 9.23 【今日阅读】https://mp.weixin.qq.com/s/iCpGXk_j_CWRLP1cKACFjA 沃尔沃目前的电子电气架构拥有100多个分布式的ECU，Patrik坦陈，这些方案都是以软硬件打包的方式从不同供应商那里采购的，沃尔沃主要承担了集成的工作。Patrik抱怨道，集成的工作量呈指数级增长，开发周期变得更长，再如此下去，汽车制造商将会失去竞争力。
