--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.26 【今日阅读】https://building.nubank.com.br/why-we-killed-our-end-to-end-test-suite/ Why We Killed Our End-to-End Test Suite
+
 9.25 【今日阅读】https://nick.groenen.me/posts/rust-error-handling/ How should you structure error handling in a mature rust application?
 
 9.24 【今日阅读】https://lobste.rs/s/sttul0/concept_files_folder_unfamiliar_modern Concept of files and folder unfamiliar to modern students
