--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.28 【今日阅读】https://blog.jez.io/cli-code-review/ Files that have changed a lot in the past are likely to change in the future. I review these files with an eye towards what the next change will bring. Files that aren’t changed frequently are more likely to be brittle. Alternatively, it’s often the case that infrequently changed files stay unchanged because the change is better made elsewhere.
+
 9.27 【今日阅读】https://dl.acm.org/doi/10.1145/227234.227243 The scientist builds in order to study; the engineer studies in order to build
 
 9.26 【今日阅读】https://building.nubank.com.br/why-we-killed-our-end-to-end-test-suite/ Why We Killed Our End-to-End Test Suite
