--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.30 【今日阅读】https://danluu.com/in-house/ That’s pretty analogous to my experience working as an electrical engineer as well, where orgs that outsource functions to other companies without retaining an in-house expert pay a very high cost, and not just monetarily. They often ship sub-par designs with long delays on top of having high costs. “Buying” can and often does reduce the amount of expertise necessary, but it often doesn’t remove the need for expertise.
+
 9.29 【今日阅读】https://github.blog/2021-08-11-githubs-engineering-team-moved-codespaces/ Yet for all our efforts, local development remained brittle. Collaborating on multiple branches across multiple projects was painful. 
 
 9.28 【今日阅读】https://blog.jez.io/cli-code-review/ Files that have changed a lot in the past are likely to change in the future. I review these files with an eye towards what the next change will bring. Files that aren’t changed frequently are more likely to be brittle. Alternatively, it’s often the case that infrequently changed files stay unchanged because the change is better made elsewhere.
