--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.10 【今日阅读】https://owengage.com/writing/2021-10-09-good-tests-dont-change/ A common complaint about unit tests is the overhead that it takes to write and maintain them. I think the core reason for this is that people write tests that they keep needing to rewrite. Good tests don't change, even if data structures change.
+
 10.9 【今日阅读】https://www.simplethread.com/20-things-ive-learned-in-my-20-years-as-a-software-engineer/ 20 Things I’ve Learned in my 20 Years as a Software Engineer
 
 9.30 【今日阅读】https://danluu.com/in-house/ That’s pretty analogous to my experience working as an electrical engineer as well, where orgs that outsource functions to other companies without retaining an in-house expert pay a very high cost, and not just monetarily. They often ship sub-par designs with long delays on top of having high costs. “Buying” can and often does reduce the amount of expertise necessary, but it often doesn’t remove the need for expertise.
