--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.12 【今日阅读】https://future.a16z.com/the-case-for-developer-experience/ Focus on the problem being solved, Focus on fitting into existing workflows, Focus on packaging and prioritization 
+
 10.11 【今日阅读】https://mp.weixin.qq.com/s/L9wbfNG5fTXF5bx7dcgj4Q 将一个复杂的单体应用以功能或业务需求垂直的切分成更小的子系统，并且能够达到以下能力：子系统间的开发、发布从空间上完成隔离，子系统可以使用不同的技术体系，子系统间可以完成基础库的代码复用，子系统间可以快速完成通信，子系统间需求迭代互不阻塞，子应用可以增量升级，子系统可以走向同一个灰度版本控制，提供集中子系统权限管控，用户使用体验整个系统是一个单一的产品，而不是彼此的孤岛，项目的监控可以细化到到子系统
 
 10.10 【今日阅读】https://owengage.com/writing/2021-10-09-good-tests-dont-change/ A common complaint about unit tests is the overhead that it takes to write and maintain them. I think the core reason for this is that people write tests that they keep needing to rewrite. Good tests don't change, even if data structures change.
