--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+10.15 【今日阅读】https://minimalmodeling.substack.com/p/best-ideas-from-the-first-25-posts Minimal modeling substack is dedicated to in-depth discussion of all kinds of topics related to the database modeling
+
+10.14 【今日阅读】https://lobste.rs/s/olwyqg/my_logging_best_practices_2020 日志最佳实践
+
 10.13 【今日阅读】https://www.bilibili.com/video/BV1vQ4y1D7T6 领域驱动设计的价值与不足
 
 10.12 【今日阅读】https://future.a16z.com/the-case-for-developer-experience/ Focus on the problem being solved, Focus on fitting into existing workflows, Focus on packaging and prioritization 
