--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.16 【今日阅读】http://www.inabr.com/news/13057 中国汽车工业协会SDV工作组携手60+成员单位联合发布《SDV服务API参考》规范，软件定义汽车
+
 10.15 【今日阅读】https://minimalmodeling.substack.com/p/best-ideas-from-the-first-25-posts Minimal modeling substack is dedicated to in-depth discussion of all kinds of topics related to the database modeling
 
 10.14 【今日阅读】https://lobste.rs/s/olwyqg/my_logging_best_practices_2020 日志最佳实践
