--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.18 【今日阅读】https://lobste.rs/s/qblewn/feedback_loops_are_bullshit Feedback Loops are Bullshit 
+
 10.17 【今日阅读】https://mp.weixin.qq.com/s/3oa6pDQVrxKWI7IrN5ZKRQ React语境下前端DDD的思考
 
 10.16 【今日阅读】http://www.inabr.com/news/13057 中国汽车工业协会SDV工作组携手60+成员单位联合发布《SDV服务API参考》规范，软件定义汽车
