--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.21 【今日阅读】https://sethmlarson.dev/blog/2021-10-18/tests-arent-enough-case-study-after-adding-types-to-urllib3 Tests aren’t enough: Case study after adding type hints to urllib3
+
 10.20 【今日阅读】https://embeddedartistry.com/blog/2019/04/01/what-can-software-organizations-learn-from-the-boeing-737-max-saga/ What can Software Organizations Learn from the Boeing 737 MAX Saga?
 
 10.19 【今日阅读】https://danluu.com/learn-what/ One piece of advice I got at some point was to amplify my strengths. All of us have strengths and weaknesses and we spend a lot of time talking about ‘areas of improvement.’ It can be easy to feel like the best way to advance is to eliminate all of those. However, it can require a lot of work and energy to barely move the needle if it’s truly an area we’re weak in. Obviously, you still want to make sure you don’t have any truly bad areas, but assuming you’ve gotten that, instead focus on amplifying your strengths. How can you turn something you’re good at into your superpower?
