--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.22 【今日阅读】https://www.destroyallsoftware.com/talks/boundaries This talk is about using simple values (as opposed to complex objects) not just for holding data, but also as the boundaries between components and subsystems.
+
 10.21 【今日阅读】https://sethmlarson.dev/blog/2021-10-18/tests-arent-enough-case-study-after-adding-types-to-urllib3 Tests aren’t enough: Case study after adding type hints to urllib3
 
 10.20 【今日阅读】https://embeddedartistry.com/blog/2019/04/01/what-can-software-organizations-learn-from-the-boeing-737-max-saga/ What can Software Organizations Learn from the Boeing 737 MAX Saga?
