--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.23 【今日阅读】https://lobste.rs/s/gqbpwd/release_early_release_often Cost of testing is the limiting factor for release frequency. If your test process is manual and expensive, you’ll be forced to release less often to amortize this cost. It usually pays off to automate testing, because there are many positives to frequent releases.
+
 10.22 【今日阅读】https://www.destroyallsoftware.com/talks/boundaries This talk is about using simple values (as opposed to complex objects) not just for holding data, but also as the boundaries between components and subsystems.
 
 10.21 【今日阅读】https://sethmlarson.dev/blog/2021-10-18/tests-arent-enough-case-study-after-adding-types-to-urllib3 Tests aren’t enough: Case study after adding type hints to urllib3
