--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.24 【今日阅读】https://blog.ploeh.dk/2021/10/18/readability-verification/  After I've written code, I'm a tapper. I'm in no position to evaluate whether the code I just wrote is readable. You need a listener (or, here: a reader) to evaluate whether or not sufficient information came across.
+
 10.23 【今日阅读】https://lobste.rs/s/gqbpwd/release_early_release_often Cost of testing is the limiting factor for release frequency. If your test process is manual and expensive, you’ll be forced to release less often to amortize this cost. It usually pays off to automate testing, because there are many positives to frequent releases.
 
 10.22 【今日阅读】https://www.destroyallsoftware.com/talks/boundaries This talk is about using simple values (as opposed to complex objects) not just for holding data, but also as the boundaries between components and subsystems.
