--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.27 【今日阅读】https://danluu.com/productivity-velocity/ Working on the right thing is more important than working quickly，Speed at X doesn't matter because you don't spend much time doing X，Thinking about productivity is bad and you should "live life"
+
 10.26 【今日阅读】https://www.youtube.com/watch?v=B2JF2eAbQWo Programming as Architecture, Design, and Urban Planning
 
 10.25 【今日阅读】https://scattered-thoughts.net/writing/reflections-on-a-decade-of-coding Reflections on a decade of coding
