--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.29 【今日阅读】https://incrementalelm.com/opaque-types-let-you-think-locally/ Opaque Types Let You Think Locally 强制模块边界是静态类型检查的重要职能
+
 10.28 【今日阅读】https://eli.thegreenplace.net/2021/a-comprehensive-guide-to-go-generate/ 宏，模板，代码生成。While Go does not have macros or other forms of metaprogramming, it's a pragmatic language and it embraces code generation with support in the official toolchain. 
 
 10.27 【今日阅读】https://danluu.com/productivity-velocity/ Working on the right thing is more important than working quickly，Speed at X doesn't matter because you don't spend much time doing X，Thinking about productivity is bad and you should "live life"
