--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+10.30 【今日阅读】https://mp.weixin.qq.com/s/BHkq7klh902mxmWSCkkNMQ 当我们直接暴露 get/set, read/write 能力出去时，我们如何约束各个调用方 caller 以符合业务逻辑的方式去读写呢？直接暴露 read/write, get/set 这类数据层语义的操作，最终代码可能容易 unmaintainable，表面上的简单，实质上的简陋，可能在从0到1的时候开发速度快了，但迭代起来、改起来很容易陷入瓶颈，难以管理的随意 read/write 散落在代码库各个地方。我们如何找到代码库里的一个个 caller 调用方，逐个修改它们的读写逻辑呢？
+
 10.29 【今日阅读】https://incrementalelm.com/opaque-types-let-you-think-locally/ Opaque Types Let You Think Locally 强制模块边界是静态类型检查的重要职能
 
 10.28 【今日阅读】https://eli.thegreenplace.net/2021/a-comprehensive-guide-to-go-generate/ 宏，模板，代码生成。While Go does not have macros or other forms of metaprogramming, it's a pragmatic language and it embraces code generation with support in the official toolchain. 
