--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.1 【今日阅读】https://lobste.rs/s/rlxfdr/why_embedded_software_development_is An interesting dynamic I’ve observed as an embedded software engineer is that all developers are expected to understand the parts of the stack above them. So, the hardware designer is expected to also know firmware and software development. The firmware developer is expected to know software development. But don’t ever expect a software developer to know what a translation lookaside buffer is or how to reflash the board. In addition to that, if the bottom of the stack (e.g. the hardware) is broken, it’s impossible to do solid work on top of it. This is why talent and skill migrates towards the bottom of the stack, because that needs to be done right for everything else to even have a chance of working.
+
 10.31 【今日阅读】https://mp.weixin.qq.com/s/PjNc7YLKT5JX_Obg2815Bg DDD 到底是银弹还是垃圾
 
 10.30 【今日阅读】https://mp.weixin.qq.com/s/BHkq7klh902mxmWSCkkNMQ 当我们直接暴露 get/set, read/write 能力出去时，我们如何约束各个调用方 caller 以符合业务逻辑的方式去读写呢？直接暴露 read/write, get/set 这类数据层语义的操作，最终代码可能容易 unmaintainable，表面上的简单，实质上的简陋，可能在从0到1的时候开发速度快了，但迭代起来、改起来很容易陷入瓶颈，难以管理的随意 read/write 散落在代码库各个地方。我们如何找到代码库里的一个个 caller 调用方，逐个修改它们的读写逻辑呢？
