--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.4 【今日阅读】https://www.zhihu.com/question/52311143/answer/133935378 为什么直接把API调用转到外面行不通：流量，出错控制，bug-to-bug兼容，什么是驱动
+
 11.3 【今日阅读】https://github.com/rust-lang/miri An experimental interpreter for Rust's mid-level intermediate representation (MIR). It can run binaries and test suites of cargo projects and detect certain classes of undefined behavior。https://www.micahlerner.com/2021/10/31/rudra-finding-memory-safety-bugs-in-rust-at-the-ecosystem-scale.html 跨边界的类型检查是个有意思的问题
 
 11.2 【今日阅读】https://fzakaria.com/2020/11/17/on-demand-linked-libraries-for-nix.html A key insight into the bootstrapping of an ELF binary in Linux is the interpreter, whose presence is there to help satisfy any dynamic linkage. 之前只知道 LD_PRELOAD，居然还有更狠的做法，直接替换 elf 里的 interpreter 路径。
