--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.6 【今日阅读】https://blog.kronis.dev/articles/never-update-anything I think that this is the inevitable future of software. "Want support for older versions of stuff that you're stuck with because of organizational reasons beyond your control? Sure, pay us!" If you look at the pricing page, you actually see that you'd need to part with 3000 USD for that sort of a license
+
 11.5 【今日阅读】https://zhuanlan.zhihu.com/p/424328840 这些梳理的过程，大部分是业务专家，以及系统架构师的范畴。他们的工作成果，将作为输入输出到技术团队实现。他们需要DDD，但他们并不用。
 
 11.4 【今日阅读】https://www.zhihu.com/question/52311143/answer/133935378 为什么直接把API调用转到外面行不通：流量，出错控制，bug-to-bug兼容，什么是驱动
