--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+11.8 【今日阅读】https://news.ycombinator.com/item?id=29139902 当讨论一个api或者写法的运行时性能的时候，我们可以认为 representation 和 implementation 是两回事。通过优化引擎，是可以让 representation 很冗余，但是 implementation 仍然运行时很高效的。这是因为在实际让 cpu 去跑之前，可以有一个转换的过程。但是如果讨论的不是 cpu 运行时性能，而是人脑的“运行时”性能，也就是代码可读性的问题。则没有这么一个转换的过程。source code 即是 representation 也是 implementation。
+
+11.7 【今日阅读】https://lobste.rs/s/wf3piq/npm_install_is_curl_bash It’s sad that most package tools (not just for javascript) are currently stuck in this artificial design dichotomy of allowing the library maintainer to run arbitrary code at build time with the full privileges of the user, and just not providing build-time programmability.
+
 11.6 【今日阅读】https://blog.kronis.dev/articles/never-update-anything I think that this is the inevitable future of software. "Want support for older versions of stuff that you're stuck with because of organizational reasons beyond your control? Sure, pay us!" If you look at the pricing page, you actually see that you'd need to part with 3000 USD for that sort of a license
 
 11.5 【今日阅读】https://zhuanlan.zhihu.com/p/424328840 这些梳理的过程，大部分是业务专家，以及系统架构师的范畴。他们的工作成果，将作为输入输出到技术团队实现。他们需要DDD，但他们并不用。
