--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.10 【今日阅读】https://web.eecs.utk.edu/~azh/blog/thisprojectwillonlytake.html This project will only take 2 hours
+
 11.9 【今日阅读】https://www.slideshare.net/hitesh0141/control-system-design-60465720 A brief introduction to designing consideration during a control system and implementation in mechatronics system.
 
 11.8 【今日阅读】https://news.ycombinator.com/item?id=29139902 当讨论一个api或者写法的运行时性能的时候，我们可以认为 representation 和 implementation 是两回事。通过优化引擎，是可以让 representation 很冗余，但是 implementation 仍然运行时很高效的。这是因为在实际让 cpu 去跑之前，可以有一个转换的过程。但是如果讨论的不是 cpu 运行时性能，而是人脑的“运行时”性能，也就是代码可读性的问题。则没有这么一个转换的过程。source code 即是 representation 也是 implementation。
