--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.11 【今日阅读】https://lobste.rs/s/hv7alh/designing_better_file_organization I think the filesystem as we know it is one of those OS concepts from the 1960s that really needs to be rethought. The more I work with and on databases, the more I realize that a filesystem is basically just a shitty database, with a fixed and limited schema and very poor durability for client data.
+
 11.10 【今日阅读】https://web.eecs.utk.edu/~azh/blog/thisprojectwillonlytake.html This project will only take 2 hours
 
 11.9 【今日阅读】https://www.slideshare.net/hitesh0141/control-system-design-60465720 A brief introduction to designing consideration during a control system and implementation in mechatronics system.
