--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+11.13 【今日阅读】https://matklad.github.io//2021/11/07/generate-all-the-things.html In this post, we’ll look at one technique from property-based testing repertoire: full coverage / exhaustive testing. Specifically, we will learn how to conveniently enumerate any kind of combinatorial object without using recursion.
+
+11.12 【今日阅读】https://zhuanlan.zhihu.com/p/432199409 当我们切分模块的时候，要判断是为了服务 response latency，rollout latency还是development latency
+
 11.11 【今日阅读】https://lobste.rs/s/hv7alh/designing_better_file_organization I think the filesystem as we know it is one of those OS concepts from the 1960s that really needs to be rethought. The more I work with and on databases, the more I realize that a filesystem is basically just a shitty database, with a fixed and limited schema and very poor durability for client data.
 
 11.10 【今日阅读】https://web.eecs.utk.edu/~azh/blog/thisprojectwillonlytake.html This project will only take 2 hours
