--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.14 【今日阅读】https://eta.st/2021/03/08/async-rust-2.html closure 对于用类型来表达边界是巨大的挑战。为什么 closure 是必须的？closure 解决的是什么问题？
+
 11.13 【今日阅读】https://matklad.github.io//2021/11/07/generate-all-the-things.html In this post, we’ll look at one technique from property-based testing repertoire: full coverage / exhaustive testing. Specifically, we will learn how to conveniently enumerate any kind of combinatorial object without using recursion.
 
 11.12 【今日阅读】https://zhuanlan.zhihu.com/p/432199409 当我们切分模块的时候，要判断是为了服务 response latency，rollout latency还是development latency
