--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.16 【今日阅读】https://dpc.pw/data-oriented-cleanandhexagonal-architecture-software-in-rust-through-an-example Data-oriented, clean&hexagonal architecture software in Rust – through an example project
+
 11.15 【今日阅读】https://www.youtube.com/watch?v=2JGH_SWURrI Objects vs Values: Value Oriented Programming in an Object Oriented World
 
 11.14 【今日阅读】https://eta.st/2021/03/08/async-rust-2.html closure 对于用类型来表达边界是巨大的挑战。为什么 closure 是必须的？closure 解决的是什么问题？
