--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.17 【今日阅读】https://github.com/arxanas/git-branchless/wiki/Tutorial 移除了 branch 概念之后的 git，以及类似的工具 https://github.com/arxanas/git-branchless/wiki/Related-tools
+
 11.16 【今日阅读】https://dpc.pw/data-oriented-cleanandhexagonal-architecture-software-in-rust-through-an-example Data-oriented, clean&hexagonal architecture software in Rust – through an example project
 
 11.15 【今日阅读】https://www.youtube.com/watch?v=2JGH_SWURrI Objects vs Values: Value Oriented Programming in an Object Oriented World
