--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.18 【今日阅读】https://news.ycombinator.com/item?id=28283263 This is great in theory but in reality no such distinction exists. For example, is trying to read a missing file a failure of the code, or a failure of the user? It could easily be either, the developer hardcoded the file path wrong during development, or the user selected a wrong path in a CLI, ... the distinction between errors and exceptions must made by the call site, not the definition site. The code calling readFile() knows whether the error is recoverable or not. readFile() itself does not, so the same mechanism should be used for both errors and exceptions.
+
 11.17 【今日阅读】https://github.com/arxanas/git-branchless/wiki/Tutorial 移除了 branch 概念之后的 git，以及类似的工具 https://github.com/arxanas/git-branchless/wiki/Related-tools
 
 11.16 【今日阅读】https://dpc.pw/data-oriented-cleanandhexagonal-architecture-software-in-rust-through-an-example Data-oriented, clean&hexagonal architecture software in Rust – through an example project
