--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.21 【今日阅读】https://luapower.com/philosophy Luapower doesn’t use semantic versioning. Each compatibility-breaking change is eagerly signaled with a tag change. This is the only honest choice, and if done without reserve, the tag number will show exactly how unstable an API really is.
+
 11.20 【今日阅读】https://mp.weixin.qq.com/s/qxIs-FsbiPpMe465dUM56A 寻找合适的研发效能度量指标（下） 在软件研发过程中，一般会经过三个阶段或者说接手三种类型的项目：绿地项目、棕地(黄地)项目、红地项目，（下文使用: 绿地、黄地、红地与之对应并简化代表），好像一个软件系统的生命周期。通过识别项目类型来找到此类型合适的度量指标，这可能是一个快速高效的方案。
 
 11.19 【今日阅读】https://rust-lang.github.io/api-guidelines/checklist.html API 设计良好需要考虑哪些点，这些需要注意的点为什么不是强制的呢？
