--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,14 @@
+11.23 【今日阅读】http://macqueenfest.cs.uchicago.edu/slides/harper.pdf 
+The modules design featured a number of key ideas:
+• Signatures (interfaces) and structures (basic modules).
+• Fibered representation of families of modules.
+• Dependent types for hierarchy and parameterization.
+• Subtyping to mediate composition.
+• Sharing constraints to express coherence conditions.
+• Type classes for flexible reuse.
+• Effect-sensitive abstraction (aka “generativity”).
+A sharply original, and therefore socially disruptive, design
+
 11.22 【今日阅读】https://guitarvydas.github.io/assets/2021-04-23-FDD/index.html Failure Driven Design
 
 11.21 【今日阅读】https://luapower.com/philosophy Luapower doesn’t use semantic versioning. Each compatibility-breaking change is eagerly signaled with a tag change. This is the only honest choice, and if done without reserve, the tag number will show exactly how unstable an API really is.
