--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.24 【今日阅读】https://calpaterson.com/bank-python.html One of the slightly odd things about Minerva is that a lot of it is "data-first", rather than "code-first". This is odd because the majority of software engineering is the reverse. For example, in object oriented design the aim is to organise the program around "classes", which are coherent groupings of behaviour (ie: code), the data is often simply along for the ride.
+
 11.23 【今日阅读】http://macqueenfest.cs.uchicago.edu/slides/harper.pdf 
 The modules design featured a number of key ideas:
 • Signatures (interfaces) and structures (basic modules).
