--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.26 【今日阅读】https://zhuanlan.zhihu.com/p/437951945 代码审核的两种方向：不改变现有的写法（语法和api），让机器去适配现状，用机器代替人。改变写法（语法或者api），让机器提供更强的辅助
+
 11.25 【今日阅读】https://www.tinyverse.org/ Lightweight is the right weight
 
 11.24 【今日阅读】https://calpaterson.com/bank-python.html One of the slightly odd things about Minerva is that a lot of it is "data-first", rather than "code-first". This is odd because the majority of software engineering is the reverse. For example, in object oriented design the aim is to organise the program around "classes", which are coherent groupings of behaviour (ie: code), the data is often simply along for the ride.
