--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+11.27 【今日阅读】https://stokoe.me/summary-hammock-driven-development/ What is Hammock Driven Development?
+
 11.26 【今日阅读】https://zhuanlan.zhihu.com/p/437951945 代码审核的两种方向：不改变现有的写法（语法和api），让机器去适配现状，用机器代替人。改变写法（语法或者api），让机器提供更强的辅助
 
 11.25 【今日阅读】https://www.tinyverse.org/ Lightweight is the right weight
