--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.1 【今日阅读】https://martinfowler.com/articles/cant-buy-integration.html Despite a wide range of tools that aim to simplify wiring systems together, you can’t buy integration.
+
 11.30 【今日阅读】https://iowiki.com/kdbplus/q_language_table.html Q 语言没有指针，但是有表。像 Q 语言，像 SQL，就是存算分离的编程模型
 
 11.29 【今日阅读】https://developers.facebook.com/blog/post/2021/10/21/async-stack-traces-folly-improving-debugging-developer-lifecycle/ Async stack traces in folly: Improving debugging in the developer lifecycle
