--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.2 【今日阅读】https://remix.run/ https://remix.run/docs/en/v1/guides/data-loading 对 react 组件进行存算分离
+
 12.1 【今日阅读】https://martinfowler.com/articles/cant-buy-integration.html Despite a wide range of tools that aim to simplify wiring systems together, you can’t buy integration.
 
 11.30 【今日阅读】https://iowiki.com/kdbplus/q_language_table.html Q 语言没有指针，但是有表。像 Q 语言，像 SQL，就是存算分离的编程模型
