--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.3 【今日阅读】https://lobste.rs/s/ypwgwp/tvix_we_are_rewriting_nix if you have to compute all dependencies beforehand, it both makes things slow and clashes with the way that certain packages want to be built. You have a lot of work to do before you can start to parallelize your build. Nix also very much has the “rewrite the entire upstream build system” problem that Bazel has.
+
 12.2 【今日阅读】https://remix.run/ https://remix.run/docs/en/v1/guides/data-loading 对 react 组件进行存算分离
 
 12.1 【今日阅读】https://martinfowler.com/articles/cant-buy-integration.html Despite a wide range of tools that aim to simplify wiring systems together, you can’t buy integration.
