--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.4 【今日阅读】https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.725.6063&rep=rep1&type=pdf Contemporary build systems provide limited efficiency because they lack support for expressing finegrained file dependencies
+
 12.3 【今日阅读】https://lobste.rs/s/ypwgwp/tvix_we_are_rewriting_nix if you have to compute all dependencies beforehand, it both makes things slow and clashes with the way that certain packages want to be built. You have a lot of work to do before you can start to parallelize your build. Nix also very much has the “rewrite the entire upstream build system” problem that Bazel has.
 
 12.2 【今日阅读】https://remix.run/ https://remix.run/docs/en/v1/guides/data-loading 对 react 组件进行存算分离
