--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.6 【今日阅读】https://eng.lyft.com/scaling-productivity-on-microservices-at-lyft-part-2-optimizing-for-fast-local-development-9f27a98b47ee Scaling productivity on microservices at Lyft (Part 2): Optimizing for fast local development
+
 12.5 【今日阅读】https://reproducible-builds.org/ The motivation behind the Reproducible Builds project is therefore to allow verification that no vulnerabilities or backdoors have been introduced during this compilation process. By promising identical results are always generated from a given source, this allows multiple third parties to come to a consensus on a “correct” result, highlighting any deviations as suspect and worthy of scrutiny.
 
 12.4 【今日阅读】https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.725.6063&rep=rep1&type=pdf Contemporary build systems provide limited efficiency because they lack support for expressing finegrained file dependencies
