--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,4 +1,4 @@
-12.11 【今日阅读】ThoughtWorks 徐昊：如何打造高效能团队 换个角度，你会发现软件开发是历史上第一个把知识管理当做项目管理的核心管理方法，管理知识消费的流程，给大家提供足够多的交互场景。不可言说的知识是通过循环性、有节奏的反馈和故意设计的社交活动传播的。所以，这才是敏捷方法真正能够工作的原因，而不是那些所谓的形式上的工作时间。其中格外要强调结对编程
+12.11 【今日阅读】https://mp.weixin.qq.com/s/TNm3m9fES6L9Ksg8XYwenw 换个角度，你会发现软件开发是历史上第一个把知识管理当做项目管理的核心管理方法，管理知识消费的流程，给大家提供足够多的交互场景。不可言说的知识是通过循环性、有节奏的反馈和故意设计的社交活动传播的。所以，这才是敏捷方法真正能够工作的原因，而不是那些所谓的形式上的工作时间。其中格外要强调结对编程
 
 12.10 【今日阅读】https://codefaster.substack.com/p/is-systems-engineering-just-generalist Is systems engineering just generalist engineering?
 
