--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.14 【今日阅读】https://blogs.gentoo.org/mgorny/2021/11/07/the-future-of-python-build-systems-and-gentoo/ The Python ecosystem is changing constantly, and the packaging aspect of it is no different. The original distutils build system has eventually evolved into setuptools, and is now being subsumed by it. Setuptools seems to be moving in the direction of becoming yet another PEP 517 build backend and indiscriminately removing features.
+
 12.13 【今日阅读】https://blog.klipse.tech/databook/2021/12/10/dop-link.html Principle #1: Separate code from data Principle #2: Represent data with generic data structures Principle #3: Data is immutable
 
 12.12 【今日阅读】https://lobste.rs/s/xahswz/unix_philosophy_without_left_pad_part_2 Unix philosophy without left-pad, Part 2: Minimizing dependencies with a utilities package 
