--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.18 【今日阅读】https://mp.weixin.qq.com/s/Nz0_z_TtVduBNnDgxySkfg 《聚合划分——从定性到定量》，它是DDD解空间的两大核心难题之一，这两大难题分别是限界上下文的划分与聚合的划分，今天的话题包含了三个部分，分别是理解聚合、不变量场景模式的矩阵分类和划分聚合的五大步骤
+
 12.17 【今日阅读】https://rubyonrails.org/2021/12/15/Rails-7-fulfilling-a-vision Rails 7.0: It’s the fulfillment of a vision to present a truly full-stack approach to web development that tackles both the front- and back-end challenges with equal vigor. 
 
 12.16 【今日阅读】https://go.googlesource.com/proposal/+/master/design/45713-workspace.md This proposal describes a new workspace mode in the go command for editing multiple modules. The presence of a go.work file in the working directory or a containing directory will put the go command into workspace mode. The go.work file specifies a set of local modules that comprise a workspace. When invoked in workspace mode, the go command will always select these modules and a consistent set of dependencies.
