--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.21 【今日阅读】https://docs.rs/dtolnay/0.0.9/dtolnay/macro._02__reference_types.html &T is not an "immutable reference" or "const reference" to data of type T — it is a "shared reference". And &mut T is not a "mutable reference" — it is an "exclusive reference".
+
 12.20 【今日阅读】https://matt-rickard.com/monorepos/ Monorepos have U-shaped utility. They are great for extremely small or extremely large organizations, and terrible for everything in between. Why's that?
 
 12.19 【今日阅读】https://arnoldgalovics.com/microservices-in-production/ I’ve been having this thought on the back of my mind for a long time to write about why it’s often a bad idea to start with microservices for a brand new project.
