--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.28 【今日阅读】https://devtails.xyz/3-lines-of-code-shouldnt-take-all-day 3 Lines of Code Shouldn’t Take an Entire Day to Write
+
 12.22 【今日阅读】https://tmandry.gitlab.io/blog/posts/2021-12-21-context-capabilities/ Very often in programming we find ourselves needing access to some context object in many places in our code. Some examples of context objects: Arena allocator, String interner, Logging scope, Async executor, Capability object
 
 12.21 【今日阅读】https://docs.rs/dtolnay/0.0.9/dtolnay/macro._02__reference_types.html &T is not an "immutable reference" or "const reference" to data of type T — it is a "shared reference". And &mut T is not a "mutable reference" — it is an "exclusive reference".
