--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+12.31 【今日阅读】https://apenwarr.ca/log/20211229 If you wanted to pay someone to fix some software, you didn't want a gift. You wanted a company.
+
 12.30 【今日阅读】https://mp.weixin.qq.com/s/jE9r3ovqr93m3KZ5qs-hnA 编程里的变量命名哲学
 
 12.29 【今日阅读】http://www.erights.org/talks/thesis/markm-thesis.pdf When separately written programs are composed so that they may cooperate, they may instead destructively interfere in unanticipated ways. These hazards limit the scale and functionality of the software systems we can successfully compose. This dissertation presents a framework for enabling those interactions between components needed for the cooperation we intend, while minimizing the hazards of destructive interference.
