--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.2 【今日阅读】https://fasterthanli.me/articles/why-is-my-rust-build-so-slow 使用 https://ui.perfetto.dev/ 分析 rust 构建为啥这么慢
+
 1.1 【今日阅读】https://buttondown.email/hillelwayne/archive/uncomfortable-truths-in-software-engineering/ A lot of these are really cynical, but they’re about the overall software engineering world, which consists of hundreds of thousands of companies and tens of millions of developers. We can still make things locally better, and that’s enough for me to keep trying.
 
 12.31 【今日阅读】https://apenwarr.ca/log/20211229 If you wanted to pay someone to fix some software, you didn't want a gift. You wanted a company.
